--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -12,7 +12,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:pf="http://primefaces.org/ui"
+       xmlns:pf="http://primefaces.org/ui"
 >
 
 <ui:composition template="WEB-INF/hat_template.xhtml">
@@ -26,10 +26,10 @@
             <div id="left_column" class="column">
                 <div class="column_name" id="name_of_graph">Graph</div>
                 <div class="graphic content-container result-graph_container" id="graphic">
-                    <object class="result-graph graph-canvas" type="image/png" data="#{resource['img/batman.png']}">
+                    <object class="result-graph graph-canvas" type="image/svg+xml" data="#{resource['img/batman.svg']}">
                         <img src="#{resource['img/batman.png']}" width="220" height="220" alt="График"/>
                     </object>
-                    <canvas class="graph-canvas graph-canvas_points"  width="220" height="220">Предыдущие проверки
+                    <canvas class="graph-canvas graph-canvas_points" width="220" height="220">Предыдущие проверки
                     </canvas>
                     <canvas class="graph-canvas graph-canvas_current" width="220"
                             height="220">Интерактивная область графика
@@ -42,13 +42,13 @@
                     Coordinates
                 </div>
                 <div class="input_page" id="coordinates">
-                    <h:form method="post" class="request_form" id="form">
+                    <h:form class="input-form" id="input-form">
                         <div class="descr">
                             <b class="descr">Input X:</b>
                         </div>
                         <div class="x_page">
                             <h:selectOneMenu styleClass="input-x input-form-select_x"
-                                             id="x-select" value="#{dataBean.shot.getX()}">
+                                             id="x-select" value="#{dataBean.shot.x}">
                                 <f:selectItem itemLabel="-4" itemValue="-4"/>
                                 <f:selectItem itemLabel="-3" itemValue="-3"/>
                                 <f:selectItem itemLabel="-2" itemValue="-2"/>
@@ -67,8 +67,8 @@
                         </div>
                         <div class="y_page">
                             <h:inputText styleClass="input-y" id="y-text"
-                                         maxlength="5" autocomplete="off" a:placeholder="Число от -3 до 3..."
-                                         value="#{dataBean.shot.getY()}">
+                                         maxlength="5" autocomplete="off" a:placeholder="Число от -3 до 5..."
+                                         value="#{dataBean.shot.y}">
                                 <f:validateRequired/>
                                 <f:validateDoubleRange minimum="-3" maximum="5"/>
                             </h:inputText>
@@ -78,15 +78,39 @@
                             <b>Input R:</b>
                         </div>
                         <div class="r_page">
-                            <input id="resize_slider" type="range" min="1" max="4" value="1" class="input-r"/>
+                            <div class="input-form__container input-form__container_buttons">
+                            <ul class="input-form__control input-form__button-list_r">
+                                <li class="input-form__button-list_r__item">
+                                    <h:commandButton styleClass="input-form__button input-form__button_r" id="r-button1"
+                                                     type="button" value="1" />
+                                </li>
+                                <li class="input-form__button-list_r__item">
+                                    <h:commandButton styleClass="input-form__button input-form__button_r" id="r-button2"
+                                                     type="button" value="2"/>
+                                </li>
+                                <li class="input-form__button-list_r__item">
+                                    <h:commandButton styleClass="input-form__button input-form__button_r" id="r-button3"
+                                                     type="button" value="3"/>
+                                </li>
+                                <li class="input-form__button-list_r__item">
+                                    <h:commandButton styleClass="input-form__button input-form__button_r" id="r-button4"
+                                                     type="button" value="4"/>
+                                </li>
+                            </ul>
+                                <h:panelGroup styleClass="input-form__hidden_r">
+                                    <h:inputHidden value="#{dataBean.shot.r}">
+                                        <f:validateRequired/>
+                                        <f:validateLongRange minimum="1" maximum="4"/>
+                                    </h:inputHidden>
+                        </h:panelGroup>
+                        </div>
                         </div>
 
                         <div id="table" class="input-form__control-buttons__container">
                             <h:commandButton styleClass="submit_button"
-                                             value="Отправить" action="#{dataBean.addShot}" >
+                                             value="Отправить" action="#{dataBean.addShot}">
                                 <f:ajax execute="@form" render="results"/>
                             </h:commandButton>
-
 
 
                             <h:commandButton styleClass="reset-button"
@@ -99,19 +123,19 @@
                 <div class="column_name" id="results_1">Results</div>
                 <div class="result_table_container" id="table_container">
                     <h:dataTable id="results" styleClass="result_table" value="#{dataBean.shots}" var="shot">
-                        <h:column headerClass="result-table__column result-table__column_x" id = "column_x">
+                        <h:column headerClass="result-table__column result-table__column_x" id="column_x">
                             <f:facet name="header">X</f:facet>
-                            <h:outputText value="#{shot.getX()}"/>
+                            <h:outputText value="#{shot.x}"/>
                         </h:column>
-                        <h:column headerClass="result-table__column result-table__column_y" id = "column_y">
+                        <h:column headerClass="result-table__column result-table__column_y" id="column_y">
                             <f:facet name="header">Y</f:facet>
-                            <h:outputText value="#{shot.getY()}"/>
+                            <h:outputText value="#{shot.y}"/>
                         </h:column>
-                        <h:column headerClass="result-table__column result-table__column_R" id = "column_R">
+                        <h:column headerClass="result-table__column result-table__column_R" id="column_R">
                             <f:facet name="header">R</f:facet>
-                            <h:outputText value="#{shot.getR()}"/>
+                            <h:outputText value="#{shot.r}"/>
                         </h:column>
-                        <h:column headerClass="result-table__column result-table__column_hit" id = "column_hit">
+                        <h:column headerClass="result-table__column result-table__column_hit" id="column_hit">
                             <f:facet name="header">Результат</f:facet>
                             <h:outputText value="#{shot.hitResult}"/>
                         </h:column>
@@ -120,7 +144,7 @@
             </div>
         </div>
 
-
+        <pf:remoteCommand name="addPoint" actionListener="#{dataBean.addShotWithParameters}" update="results"/>
         <h:outputScript library="js" name="main.js"/>
     </ui:define>
 </ui:composition>
